--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nestjs-multitenancy",
+  "name": "nestjs-typeorm-multi-tenancy",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Henrique Weiand",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
