Changed to find the database from the table instead of a json file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,5 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: nestjs-multitenancy
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: nestjs-typeorm-multi-tenancy
